# AndroidTacticalAssaultKit-CIV

./: .gitattributes  .gitmodules  BUILDING.md  CONTRIBUTING.md  CONTRIBUTORS.md  INTENT.md  LICENSE.md  README.md  THIRDPARTY.md  VERSION.md  test.txt
libunwindstack-ndk/cmake/: CMakeLists.txt
libunwindstack-ndk/cmake/lzma/: CMakeLists.txt
takengine/mapengine/: CMakeLists.txt
takengine/mapengine/android/: build.gradle  build.xml  gradlew.bat
takengine/mapengine/android/gradle/wrapper/: gradle-wrapper.properties
takengine/mapengine/android/jni/: Android.mk  Application.mk
takengine/mapengine/android/src/main/: AndroidManifest.xml
takengine/mapengine/gl/jogl-c/: CMakeLists.txt
takengine/mapengine/gl/jogl-c/autogen/: GLFunctionTable.c.template  GLFunctionTable.h.template  autogen.java  autogen.properties
takengine/mapengine/gl/jogl-c/cmake/: SetJavaHome.cmake
takengine/mapengine/gl/jogl-c/src/: CMakeLists.txt
takengine/mapengine/gl/jogl-c/vc/: GLESv2-JOGL.sln  GLESv2-JOGL.vcxproj  GLESv2-JOGL.vcxproj.filters
takengine/mapengine/gl/stub/: CMakeLists.txt
takengine/mapengine/gl/stub/src/: CMakeLists.txt
takengine/mapengine/gl/stub/vc/: GLESv2-stub.sln  GLESv2-stub.vcxproj  GLESv2-stub.vcxproj.filters
takengine/mapengine/gl/vc/: libGLESv2.def
takengine/mapengine/java/: gradle.properties  settings.gradle
takengine/mapengine/java/examples/ExampleWindow/: build.gradle  settings.gradle
takengine/mapengine/java/lib/: build.gradle
takengine/mapengine/java/takengine-support-android/lib/: build.gradle
takengine/mapengine/java/takengine-support-atak/lib/: build.gradle
takengine/mapengine/sdk/: .clang-format  .clang-tidy  .cproject  .cvsignore  .project  Android.mk  Application.mk  Common.mk  Makefile  include.sh
takengine/mapengine/sdk/.externalToolBuilders/: MapEngineSDK NDK clean.launch  MapEngineSDK NDK.launch
takengine/mapengine/sdk/src/core/: AbstractLayer2.cpp  AtakMapController.cpp  AtakMapController.h  AtakMapView.cpp  AtakMapView.h  Datum.cpp  Datum2.cpp  Datum2.h  Ellipsoid2.h  GeoPoint.cpp  GeoPoint.h  GeoPoint2.cpp  GeoPoint2.h  Globe.cpp  Globe.h  Layer.cpp  Layer.h  Layer2.h  LegacyAdapters.cpp  Makefile  MapCamera.cpp  MapCamera2.h  MapProjectionDisplayModel.cpp  MapRenderer.h  MapSceneModel.cpp  MapSceneModel.h  MapSceneModel2.cpp  MapSceneModel2.h  MultiLayer2.cpp  MultiLayer2.h  MultiLayerImpl.cpp  Projection2.h  ProjectionFactory.h  ProjectionFactory2.cpp  ProjectionFactory3.cpp  ProjectionSpi.h  ProjectionSpi3.h  RenderContext.cpp  Service.cpp  Service.h  (+4 more)
takengine/mapengine/sdk/src/currency/: CatalogDatabase2.cpp  CatalogDatabase2.h  CurrencyRegistry2.cpp  CurrencyRegistry2.h
takengine/mapengine/sdk/src/db/: BindArgument.cpp  BindArgument.h  Bindable.cpp  Bindable.h  CatalogDatabase.cpp  Cursor.cpp  Cursor.h  CursorWrapper2.cpp  CursorWrapper2.h  DB_Error.h  DataStore.h  Database.cpp  Database.h  Database2.cpp  Database2.h  DatabaseFactory.cpp  DatabaseFactory.h  DatabaseProvider.h  DatabaseWrapper.cpp  DatabaseWrapper.h  Makefile  Query.cpp  Query.h  SpatiaLiteDB.cpp  SpatiaLiteDB.h  SpatiaLiteDBURILoaderSpi.cpp  SpatiaLiteDBURILoaderSpi.h  Statement.cpp  Statement.h  Statement2.cpp  Statement2.h  WhereClauseBuilder.cpp  WhereClauseBuilder2.cpp  WhereClauseBuilder2.h
takengine/mapengine/sdk/src/elevation/: AbstractElevationData.cpp  AbstractElevationData.h  ElevationChunk.cpp  ElevationChunk.h  ElevationChunkCursor.cpp  ElevationChunkFactory.cpp  ElevationChunkFactory.h  ElevationData.cpp  ElevationData.h  ElevationDataSpi.cpp  ElevationDataSpi.h  ElevationHeatMapLayer.cpp  ElevationManager.cpp  ElevationManager.h  ElevationSource.cpp  ElevationSource.h  ElevationSourceManager.cpp  ElevationSourceManager.h  MultiplexingElevationChunkCursor.cpp
takengine/mapengine/sdk/src/feature/: AbstractDataSourceFeatureDataStore2.h  AbstractFeatureDataStore2.cpp  AbstractFeatureDataStore2.h  AltitudeMode.h  AttributedFeatureDatabase.h  BruteForceLimitOffsetFeatureCursor.cpp  BruteForceLimitOffsetFeatureCursor.h  BruteForceLimitOffsetFeatureSetCursor.h  DataSourceFeatureDataStore.h  DataSourceFeatureDataStore2.h  DataSourceFeatureDataStore3.cpp  DataSourceFeatureDataStore3.h  DefaultDriverDefinition.cpp  DefaultDriverDefinition.h  DefaultDriverDefinition2.cpp  DefaultDriverDefinition2.h  DefaultSchemaDefinition.cpp  DefaultSchemaDefinition.h  DrawingTool.cpp  DrawingTool.h  Envelope.h  Envelope2.cpp  Envelope2.h  FDB.cpp  FDB.h  FalconViewFeatureDataSource.cpp  FalconViewFeatureDataSource.h  Feature.cpp  Feature.h  Feature2.cpp  Feature2.h  FeatureCatalogDatabase.cpp  FeatureCatalogDatabase.h  FeatureDataSource.cpp  FeatureDataSource.h  FeatureDataSource2.cpp  FeatureDataStore.cpp  FeatureDataStore.h  FeatureDataStore2.cpp  FeatureDataStore2.h  (+88 more)
takengine/mapengine/sdk/src/math/: AABB.cpp  AABB.h  Ellipsoid.h  Ellipsoid2.cpp  Ellipsoid2.h  Frustum2.cpp  Frustum2.h  GeometryModel2.cpp  GeometryModel2.h  Matrix.cpp  Matrix.h  Matrix2.cpp  Matrix2.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Plane2.cpp  Plane2.h  Point2.h  Ray.h  Ray2.h  Rectangle.h  Rectangle2.h  Sphere.h  Sphere2.cpp  Sphere2.h  Statistics.cpp  Statistics.h  Triangle.h  Utils.cpp  Utils.h  Vector.h  Vector4.h
takengine/mapengine/sdk/src/model/: ASSIMPSceneSpi.cpp  ASSIMPSceneSpi.h  Cesium3DTilesSceneInfoSpi.cpp  Material.cpp  (+39 more)
takengine/mapengine/sdk/tests/: ASSIMPSceneSpiTests.cpp  AsyncBitmapLoader2Tests.cpp  AtakMapViewTest.cpp  C3DTTilesetTests.cpp  Cesium3DTilesSceneInfoSpiTests.cpp  ContextCaptureSceneInfoSpiTests.cpp  ElevationTerrainTileTests.cpp  GLTextLocalizeTests.cpp  GeometryFactoryTests.cpp  HttpProtocolHandlerTests.cpp  IOTests.cpp  MathUtilsTests.cpp  PrecisionImageryFactoryTests.cpp  SceneBuilderTests.cpp  SpatialCalculator2Tests.cpp  StringBuilderTests.cpp  TakEngineTestsHexdump.cpp  TakEngineTestsHexdump.h  TakEngineTestsLogging.cpp  TakEngineTestsLogging.h  TakEngineTestsResources.h  TessellationTests.cpp  URITests.cpp  ZipFileTests.cpp
takkernel/engine/: CMakeLists.txt  build.gradle
takkernel/engine/cmake/support/: Config.cmake  ValidateJavaExists.cmake
(+8416 files in other folders)
